src/app/visualizationComponents/AlignmentViewComponent/alignment-view-plugin-component.scss
:host {
    position: absolute;
    overflow: hidden;
    z-index: 1 !important;
    padding: 1px; 
    //background-color: rgb(168, 125, 211, .2);
  }

    /* Button appearance on hover */
.btn-icon:hover {
  transform: scale(1.1); /* Slight enlarge on hover */
  background-color: rgba(0, 0, 0, 0.1); /* Subtle background color on hover */
}

.btn-icon {
  margin-right: 10px;
  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
}

.flaticon-settings:before {
  font-weight: 800 !important;
}

.flaticon-pin:before {
  font-weight: 800 !important;
}

.flaticon-download:before {
  font-weight: 800 !important;
}

.msa-viewer-container {
  position: relative;
  top: 50px;
  left: 5px;
  padding-right: 5px;
}

#msa-viewer {
  overflow-y: hidden;
  overflow-x: hidden;
  display: flex;
  gap: 5px;
}

.title {
  font-size: 32px;
  text-align: right;
  padding-right: 20px;
}

.canvasLabels {
  overflow-y: auto;
  overflow-x: hidden;
  position: relative;
}

#searchHighlight {
  width: 1500px;
  position: absolute;
  height: 10px;
  top: 0px;
  left: 0px;
  border: red 2px dotted;
}

#searchHighlightHolder{
  width: 250px;
}

.searchHighlight2 {
  background-color: #E3F2FD;
}

.triangle {
  width: 10px;
  position: relative;
  left: 42px;
  border-left: 8px transparent solid;
  border-right: 8px transparent solid;
  border-bottom: 16px lightgray solid;
}

#tooltipHolder {
  display: none;
}

#tooltip {
  background-color: lightgray; 
  padding: 5px;
  display: block;
}

.canvasHolder {
  overflow-x: auto;
  overflow-y: scroll;
}

#alignmentTop {
  overflow-x: auto;
  height: 160px;
}

.alignRow {
  display: flex;
}

.alignName {
  width: 200px;
  margin-right: 5px;
  flex: none;
}

#miniMapHolder {
  padding: 5px 10px;
  border: 3px black solid;
  background-color: white;
  margin-bottom: 10px;
}

#miniMap {
  position: relative;
}

#miniMapTitle{
  margin-bottom: 10px;
}

#miniMapHighlight {
  display: none;
  background-color: rgb(gray, .4);
  position: absolute;
}

.customColorSchemeSelection div {
  justify-content: space-around;
}

.customColorSchemeSelection label {
  display: flex; 
  align-items: center;
  gap:10px;
}

.customColorSchemeSelection input {
  width: 46.63px
}

